--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-wavify": "^1.6.3"
+    "react-wavify": "^1.6.3",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
