--- a/package.json
+++ b/package.json
@@ -14,24 +14,22 @@
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
     "@fontsource/arvo": "^4.5.7",
-    "@mui/material": "^5.10.14",
-    "@prisma/client": "^4.6.1",
-    "axios": "^1.1.3",
-    "next": "12.3.3",
-    "next-auth": "^4.17.0",
+    "@mui/material": "^5.11.1",
+    "axios": "1.1.3",
+    "next": "12.3.4",
+    "next-auth": "^4.18.6",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-wavify": "^1.6.3"
   },
   "devDependencies": {
-    "@types/node": "18.11.9",
+    "@types/node": "18.11.17",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "18.0.25",
+    "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "eslint": "8.28.0",
-    "eslint-config-next": "12.3.3",
-    "prisma": "^4.6.1",
-    "typescript": "4.9.3"
+    "eslint": "8.30.0",
+    "eslint-config-next": "12.3.4",
+    "typescript": "4.9.4"
   }
 }
